[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",]
build-backend = "setuptools.build_meta"

[project]
name = "mpl_animators"
description = "An interactive animation framework for matplotlib."
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst", content-type = "text/plain" }
authors = [
  { name = "The SunPy Developers", email = "sunpy@googlegroups.com" },
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
]
docs = [
  "sphinx",
  "sphinx-automodapi",
]
[project.urls]
repository = "https://docs.sunpy.org/projects/mpl-animators"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["mpl_animators._dev*"]

[tool.setuptools_scm]
write_to = "mpl_animators/_version.py"

[ tool.gilesbot ]
  [ tool.gilesbot.circleci_artifacts ]
    enabled = true

  [ tool.gilesbot.circleci_artifacts.py312_figure_report ]
    url = ".tmp/py312-figure/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons, for py312-figure."
    report_on_fail = true

  [ tool.gilesbot.circleci_artifacts.py310_figure_report ]
    url = ".tmp/py310-figure/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons, for py310-figure."
    report_on_fail = true

  [ tool.gilesbot.circleci_artifacts.py39_figure_oldestdeps_report ]
    url = ".tmp/py39-figure-oldestdeps/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons for py39-figure-oldestdeps."
    report_on_fail = true

  [ tool.gilesbot.circleci_artifacts.py311_figure_devdeps_report ]
    url = ".tmp/py311-figure-devdeps/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons for py311-figure-devdeps."
    report_on_fail = true
