[build-system]
requires = [
  "setuptools>=62.1",
  "setuptools_scm[toml]>=6.2",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "mpl_animators"
description = "An interactive animation framework for matplotlib."
requires-python = ">=3.10"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "licenses/LICENSE.rst"}
authors = [
  { name = "The SunPy Developers", email = "sunpy@googlegroups.com" },
]
dependencies = [
  "matplotlib>=3.5.0",
  "numpy>=1.23.0",
  "astropy>=5.6.0"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
  "pytest",
  "pytest-doctestplus",
  "pytest-cov",
  "pytest-xdist",
  "pytest-mpl"
]
docs = [
  "sphinx",
  "sphinx-automodapi",
  "sunpy-sphinx-theme",
]

[project.urls]
Homepage = "https://sunpy.org"
Download = "https://pypi.org/project/mpl-animators/"
"Source Code" = "https://github.com/sunpy/mpl-animators/"
Documentation = "https://docs.sunpy.org/projects/mpl-animators"
Changelog = "https://github.com/sunpy/mpl-animators/releases"
"Issue Tracker" = "https://github.com/sunpy/mpl-animators/issues"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["mpl_animators._dev*"]

[tool.setuptools_scm]
write_to = "mpl_animators/_version.py"

[ tool.gilesbot ]
  [ tool.gilesbot.circleci_artifacts ]
    enabled = true

  [ tool.gilesbot.circleci_artifacts.py311-figure_report ]
    url = ".tmp/py311-figure/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons, for py311-figure."
    report_on_fail = true

  [ tool.gilesbot.circleci_artifacts.py310-figure-oldestdeps_report ]
    url = ".tmp/py310-figure-oldestdeps/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons for py310-figure-oldestdeps."
    report_on_fail = true

  [ tool.gilesbot.circleci_artifacts.py312-figure-devdeps_report ]
    url = ".tmp/py311-figure-devdeps/figure_test_images/fig_comparison.html"
    message = "Click details to see the figure test comparisons for py312-figure-devdeps."
    report_on_fail = true
