[metadata]
name = mpl_animators
author = The SunPy Developers
author_email = sunpy@googlegroups.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://sunpy.org
description = An interative animation framework for matplotlib
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.7
setup_requires = setuptools_scm
install_requires = 
  matplotlib>=3.2.0
  numpy>=1.17.0

[options.extras_require]
all =
    astropy>=4.2.0
wcs =
    astropy>=4.2.0
test =
    pytest
    pytest-cov
    pytest-mpl
docs =
    sphinx
    sphinx-automodapi

[tool:pytest]
testpaths = "mpl_animators" "docs"

[coverage:run]
omit =
  mpl_animators/__init*
  mpl_animators/conftest.py
  mpl_animators/*setup_package*
  mpl_animators/tests/*
  mpl_animators/*/tests/*
  mpl_animators/extern/*
  mpl_animators/version*
  */mpl_animators/__init*
  */mpl_animators/conftest.py
  */mpl_animators/*setup_package*
  */mpl_animators/tests/*
  */mpl_animators/*/tests/*
  */mpl_animators/extern/*
  */mpl_animators/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
