[metadata]
name = mpl_animators
author = The SunPy Developers
author_email = sunpy@googlegroups.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://docs.sunpy.org/projects/mpl-animators
description = An interactive animation framework for matplotlib
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >=3.9
setup_requires = setuptools_scm
install_requires =
  matplotlib>=3.5.0
  numpy>=1.21.0

[options.extras_require]
all =
    astropy>=5.0.6,!=5.1.0
wcs =
    astropy>=5.0.6,!=5.1.0
tests =
    pytest
    pytest-cov
    pytest-mpl
docs =
    sphinx
    sphinx-automodapi
    sunpy-sphinx-theme

[tool:pytest]
testpaths = "mpl_animators" "docs"
mpl-results-path = figure_test_images
mpl-use-full-test-name = True

[coverage:run]
omit =
  mpl_animators/__init*
  mpl_animators/conftest.py
  mpl_animators/*setup_package*
  mpl_animators/tests/*
  mpl_animators/*/tests/*
  mpl_animators/extern/*
  mpl_animators/version*
  */mpl_animators/__init*
  */mpl_animators/conftest.py
  */mpl_animators/*setup_package*
  */mpl_animators/tests/*
  */mpl_animators/*/tests/*
  */mpl_animators/extern/*
  */mpl_animators/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
